sandbox/output
StringCalculatorTest.java:8: error: cannot find symbol
        StringCalculator caculator = new StringCalculator();
        ^
  symbol:   class StringCalculator
  location: class StringCalculatorTest
StringCalculatorTest.java:8: error: cannot find symbol
        StringCalculator caculator = new StringCalculator();
                                         ^
  symbol:   class StringCalculator
  location: class StringCalculatorTest
2 errors
